--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,24 +29,26 @@ dist.jar=${dist.dir}/PredictionApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.gephi-toolkit-0.9.1-all_2.jar=jars/gephi-toolkit-0.9.1-all_2.jar
-file.reference.gephi-toolkit-0.9.1-all_2.jar-1=C:\\Users\\ado_k\\Desktop\\jars\\gephi-toolkit-0.9.1-all_2.jar
-file.reference.gs-algo-1.3-javadoc.jar=C:\\Users\\ado_k\\workspace\\GraphStreamStarted\\lib\\gs-algo-1.3-javadoc.jar
-file.reference.gs-algo-1.3-sources.jar=C:\\Users\\ado_k\\workspace\\GraphStreamStarted\\lib\\gs-algo-1.3-sources.jar
-file.reference.gs-algo-1.3.jar=C:\\Users\\ado_k\\workspace\\GraphStreamStarted\\lib\\gs-algo-1.3.jar
-file.reference.gs-core-1.3-javadoc.jar=C:\\Users\\ado_k\\workspace\\GraphStreamStarted\\lib\\gs-core-1.3-javadoc.jar
-file.reference.gs-core-1.3-sources.jar=C:\\Users\\ado_k\\workspace\\GraphStreamStarted\\lib\\gs-core-1.3-sources.jar
-file.reference.gs-core-1.3.jar=C:\\Users\\ado_k\\workspace\\GraphStreamStarted\\lib\\gs-core-1.3.jar
-file.reference.gs-ui-1.3-javadoc.jar=C:\\Users\\ado_k\\workspace\\GraphStreamStarted\\lib\\gs-ui-1.3-javadoc.jar
-file.reference.gs-ui-1.3-sources.jar=C:\\Users\\ado_k\\workspace\\GraphStreamStarted\\lib\\gs-ui-1.3-sources.jar
-file.reference.gs-ui-1.3.jar=C:\\Users\\ado_k\\workspace\\GraphStreamStarted\\lib\\gs-ui-1.3.jar
+file.reference.gephi-toolkit-0.9.1-all.jar=externJars/gephi-toolkit-0.9.1-all.jar
+file.reference.gs-algo-1.3-javadoc.jar=externJars/gs-algo-1.3-javadoc.jar
+file.reference.gs-algo-1.3-sources.jar=externJars/gs-algo-1.3-sources.jar
+file.reference.gs-algo-1.3.jar=externJars/gs-algo-1.3.jar
+file.reference.gs-core-1.3-javadoc.jar=externJars/gs-core-1.3-javadoc.jar
+file.reference.gs-core-1.3-sources.jar=externJars/gs-core-1.3-sources.jar
+file.reference.gs-core-1.3.jar=externJars/gs-core-1.3.jar
+file.reference.gs-ui-1.3-javadoc.jar=externJars/gs-ui-1.3-javadoc.jar
+file.reference.gs-ui-1.3-sources.jar=externJars/gs-ui-1.3-sources.jar
+file.reference.gs-ui-1.3.jar=externJars/gs-ui-1.3.jar
+file.reference.sqlite-jdbc-3.16.1.jar=externJars/sqlite-jdbc-3.16.1.jar
+file.reference.weka-src.jar=externJars/weka3.8/weka-src.jar
+file.reference.weka.jar=externJars/weka3.8/weka.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.gephi-toolkit-0.9.1-all_2.jar}:\
+    ${file.reference.gephi-toolkit-0.9.1-all.jar}:\
     ${file.reference.gs-algo-1.3-javadoc.jar}:\
     ${file.reference.gs-algo-1.3-sources.jar}:\
     ${file.reference.gs-algo-1.3.jar}:\
@@ -56,10 +58,13 @@ javac.classpath=\
     ${file.reference.gs-ui-1.3-javadoc.jar}:\
     ${file.reference.gs-ui-1.3-sources.jar}:\
     ${file.reference.gs-ui-1.3.jar}:\
-    ${file.reference.gephi-toolkit-0.9.1-all_2.jar-1}
+    ${file.reference.sqlite-jdbc-3.16.1.jar}:\
+    ${file.reference.weka-src.jar}:\
+    ${file.reference.weka.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
